--- a/_posts/2020-02-21-n7.md
+++ b/_posts/2020-02-21-n7.md
@@ -4,22 +4,22 @@ title:  "This Week in tbrpggepp #7"
 date:   2020-02-21
 ---
 
-##Progress:
+## Progress:
 Progress this week largely consisted of theory work and little direct project development. I worked mostly on practical tasks involving 120 lines of searching algorithms written by hand in C.
 
-##Problems
+## Problems
 This was the first moderately-sized program I've ever written in C, so it was initially exceedingly difficult to figure out how to read standard input and append values to variable-length arrays and such. I found a solution to the latter problem from Klas Lindback on Stack Overflow and I figured out how to read stdin with `fgets()`.
 
 I had a big problem with `sizeOf(array)` when array is passed as a pointer variable to a subroutine, since the `sizeOf()`function just returned the size of the pointer itself rather than the actual array it points to the beginning of. This was resolved by defining ARRAY_SIZE as a constant in the program and not needing to calculate the size of the array in the first place.
 
 Another issue was when I attempted to compare the string fed from stdin to predefined commands, this was easily solved by subtracting 1 from the compared string character indexes, since C appends 0 to every string as a null-terminator.
 
-##Learning
+## Learning
 
 
-##Help
+## Help
 
-##Refinements
+## Refinements
 
-##Screenshots
-![](/home/quiterion/Skool/SDD/MajorProject/images/.png)
+## Screenshots
+![](/assets/.png)
