--- a/_posts/2020-02-21-n7.md
+++ b/_posts/2020-02-21-n7.md
@@ -5,21 +5,23 @@ date:   2020-02-21
 ---
 
 ## Progress:
-Progress this week largely consisted of theory work and little direct project development. I worked mostly on practical tasks involving 120 lines of searching algorithms written by hand in C.
+Progress this week largely consisted of theory work and little direct project development. I worked mostly on practical tasks involving 120 lines of searching algorithms written by hand in minimalistic C.
 
 ## Problems
-This was the first moderately-sized program I've ever written in C, so it was initially exceedingly difficult to figure out how to read standard input and append values to variable-length arrays and such. I found a solution to the latter problem from Klas Lindback on Stack Overflow and I figured out how to read stdin with `fgets()`.
+This was the first moderately-sized program I've ever written in C, so it was initially exceedingly difficult to figure out how to do things like read standard input and append values to variable-length arrays. I found a solution to the latter problem from Klas Lindback on Stack Overflow and by consulting documentation and online sources figured out how to read stdin with `fgets()`.
 
-I had a big problem with `sizeOf(array)` when array is passed as a pointer variable to a subroutine, since the `sizeOf()`function just returned the size of the pointer itself rather than the actual array it points to the beginning of. This was resolved by defining ARRAY_SIZE as a constant in the program and not needing to calculate the size of the array in the first place.
+I had a big problem with the `sizeOf()` function when used to determine the size of an array that is passed as a pointer variable to a subroutine, since in that specific case the function just returned the size of the pointer itself rather than the actual array it points to the beginning of. This was resolved by defining ARRAY_SIZE as a constant in the program and circumventing the need to calculate the size of the array in the first place.
 
-Another issue was when I attempted to compare the string fed from stdin to predefined commands, this was easily solved by subtracting 1 from the compared string character indexes, since C appends 0 to every string as a null-terminator.
+Another issue was when I attempted to evaluate equivalency between a very large string read from stdin to smaller strings presented as 'commands'. This was easily solved (after some time) by subtracting 1 from the compared string upper character index, since C appends 0 to every string as a null-terminator.
 
-## Learning
+# Learning
 
+Aside from the writing in C, the rest of the theory work for this week largely consisted of revision. We encountered the concepts of algorithmic time complexity, linear search, and binary search in class, all of which I was previously familiar with.
 
 ## Help
 
-## Refinements
+Copied a C function from an answer made by Klas Lindback on Stack Overflow that can be used to 'append' a value to the end of an array up to a fixed length.
 
 ## Screenshots
-![](/assets/.png)
+![Linear and binary search code](/assets/search.png)
+![Linear and binary search program in use](/assets/search_out.png)
