Fix minor typos

--- a/_posts/2020-03-06-n9.md
+++ b/_posts/2020-03-06-n9.md
@@ -21,5 +21,5 @@ Completing the sorting prac from last week in C from scratch aided in my underst
 ![Strings Prac](/assests/strings.png)
 The side-effect of spending so long working on your sorting prac is that it leaves very little time for your string processing prac.
 
-![Second Iteration Flowchart](/assests/SystemFlowchart.png)
-![Second Iteration Structure Chart](/assests/StructureChart.png)
+![Second Iteration Flowchart](/assets/SystemFlowchart.png)
+![Second Iteration Structure Chart](/assets/StructureChart.png)
