Fix another minor typo

--- a/_posts/2020-03-06-n9.md
+++ b/_posts/2020-03-06-n9.md
@@ -16,7 +16,7 @@ Completing the sorting prac from last week in C from scratch aided in my underst
 ## Screenshots
 ![Finished Sort C Prac Code](/assets/sort2.png)
 
-![Second Gantt Chart](/assests/gantt_chart_1.png)
+![Second Gantt Chart](/assets/gantt_chart_1.png)
 
 ![Strings Prac](/assests/strings.png)
 The side-effect of spending so long working on your sorting prac is that it leaves very little time for your string processing prac.
