Add more blogs from disk with screenshots

--- a/_posts/2020-02-21-n7.md
+++ b/_posts/2020-02-21-n7.md
@@ -14,7 +14,7 @@ I had a big problem with the `sizeOf()` function when used to determine the size
 
 Another issue was when I attempted to evaluate equivalency between a very large string read from stdin to smaller strings presented as 'commands'. This was easily solved (after some time) by subtracting 1 from the compared string upper character index, since C appends 0 to every string as a null-terminator.
 
-# Learning
+## Learning
 
 Aside from the writing in C, the rest of the theory work for this week largely consisted of revision. We encountered the concepts of algorithmic time complexity, linear search, and binary search in class, all of which I was previously familiar with.
 
