--- a/_posts/2020-02-28-n8.md
+++ b/_posts/2020-02-28-n8.md
@@ -8,7 +8,7 @@ date:   2020-02-28
 This week we mostly covered theory content relating to insertion, bubble, and selection sorting. We performed multiple exam questions during class and I got working on my data dictionary. I got started on an implementation of the sorting algorithms in C.
 ## Problems
 Didn't encounter many problems this week, as were were mostly conducting theory work. I found it quite difficult to remember exactly which name referred to which algorithm, though.
-# Learning
+## Learning
 The specifics of Insertion and Selection Sort were somewhat new to me, but it was entertaining to derive the time complexity for both of them by hand.
 
 ## Screenshots
