--- a/_posts/2020-03-06-n9.md
+++ b/_posts/2020-03-06-n9.md
@@ -8,7 +8,7 @@ date:   2020-03-06
 Yet another theory content based week: we largely spent the time reviewing string processing. I finished up my C sorting prac from last week and worked on my second Gantt chart, my structure chart, and my flowchart. I tweaked the text of the social and ethical issues justification section somewhat as well.
 ## Problems
 Resolved the dilemma of representing event-driven user action in the flowchart by consulting with my teacher, who told me that simply displaying the linear path of the flowchart with loops inserted is fine. I was quite proud of myself that I could present the option of clicking "Online Help" at any time in my structure chart by putting a choice symbol over the line without a second option - meaning the user can choose to use or not to use the Online Help at any time.
-# Learning
+## Learning
 Revision of string processing included common processes such as extracting, deleting, inserting, and concatenation. In C, strings are simply pure arrays that contain integers corresponding to characters: this simple fact reduces the complexity of the topic quite drasticaly.
 
 Completing the sorting prac from last week in C from scratch aided in my understanding of the sorting algorithms quite effectively as well.
