--- a/_posts/2020-03-13-n10.md
+++ b/_posts/2020-03-13-n10.md
@@ -8,7 +8,7 @@ date:   2020-03-13
 During this week we covered the theory content of multidimensional arrays, which I suspect may be useful in the future implementation of my project which will prominently feature a large 2D grid. I started putting real progress towards my currently-undecided method of publishing blogs. Unfortunately I spend a fair chunk of the week at home due to illness, therefore little other progress was made.
 ## Problems
 One of the things I want to get away from most during this project is Blogger. Frankly, its interface was always a chore to use, especially the uploading of images; and I've long held the notion in my mind that I'll eventually create a website on the open web. I'm looking at multiple options, such as self-hosting a site on my homeserver or using GitHub pages; but underlying this I believe I'll use a static site generator like Jekyll or Hugo to generate html out of markdown files. I've made this decision because markdown is beautifully simple to format and edit, and using a big messy program like a static site generator sounds like a fair bit of fun.
-# Learning
+## Learning
 Learned about static-site generator systems for blog-website manufacturing, such as Jekyll or Hugo. Both are open-source and give large degrees of freedom regarding styles and customisation and look quite appealing compared to Google's alternative.
 
 ## Screenshots
