--- a/_posts/2020-05-08-n12.md
+++ b/_posts/2020-05-08-n12.md
@@ -1,25 +1,25 @@
 ---
 layout: post
-title:  "This Week in tbrpggepp #12"
+title:  "This Week in tbrpggepp #12: COVID Special"
 date:   2020-05-08
 ---
 
 ## COVID-19: AKA The Dark Ages
 
-From the end of the Major Project Designing and Planning submission to the end of Week 2 Term 2, we were all left in effective isolation with only the mere threat of a Major Project submission yet another term on the horizon to keep us at bay. Safe to say, not a lot of SDD work was conducted by me personally during this period, aside from the sporadic reading of my PyQt4 textbook. Instead of providing a Progress/Problems/Learning blog post for this period, I will instead insert the transcript of a mock interview between me, the Developer and Me, the client.
+From the end of the Major Project Designing and Planning submission to the end of Week 2 Term 2, we were all left in effective isolation with only the mere threat of a Major Project submission yet another term on the horizon to keep us at bay. Safe to say, not a lot of SDD work was conducted by me personally during this period, aside from the sporadic reading of my PyQt4 textbook, which would fall under the "Learning" section of this post. That aside, below lies the transcript of an interview between Me, the Developer; and Me, the Client.
 
-Developer: What are you looking for in this program and what is your motivation for commissioning it?
+Developer: What are you looking for out of this project?
 
-Client: *Throughout the years I've created many text-based adventure games for work and leisure, yet every time I create a game I have to manually edit vast and clunky json files by hand. My hope for tbrpggepp is that it will make the creation of such games orders of magnitudes easier and more intuitive.*
+Client: Throughout the years I've created many text-based adventure games for work and leisure, yet every time I create a game I have to manually edit vast and clunky json files by hand. My hope for tbrpggepp is that it will make the creation of such games orders of magnitudes easier and more intuitive.
 
-Developer: What platform do you want us to release the program to?
+Developer: What platform do you want the project to release on?
 
-Client: *The program has to sufficiently cross-platform in nature such that it may be ran on both Linux and Windows. Mac OS would be a nice touch.*
+Client: The program has to sufficiently cross-platform in nature such that it may be ran on both Linux and Windows. Mac OS would be a nice touch.
 
-Developer: How should we release the program?
+Developer: How should the project be released?
 
-Client: *As a libre software product, the program should be distributed by publicly releasing the source code on a site such as GitHub*
+Client: As a libre software product, the program should be distributed by publicly releasing the source code on a site such as GitHub
 
 Developer: Are you satisfied by the User Interface mockups we've created so far?
 
-Client: *They look so good, it's as if I wrote them myself.*
+Client: They look astounding, it's almost as if I wrote them myself.
